avoid loading the i18n bundle twice